--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.azs_fx_1/com.example.azs_fx_1.HelloApplication</mainClass>
+                            <mainClass>com.example.azs_fx_1/com.example.azs_fx_1.AzsApplication</mainClass>
                         </configuration>
                     </execution>
                 </executions>
